# notification-platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  supervisord.conf
.github/workflows/: ci.yml
app/: __init__.py
app/db/: engine.py  notification_repo.py  profile_repo.py  subscription_repo.py
app/delivery/: fcm_client.py  worker.py
app/engagement/: __init__.py  engine.py  scheduler.py
app/engagement/campaigns/: base.py  campaign_runner.py  definitions.py  registry.py
app/engagement/cooldown/: __init__.py  cooldown_manager.py
app/engagement/emitter/: event_emitter.py
app/engagement/segments/: __init__.py  base.py  registry.py  user_segments.py
app/engine/: __init__.py  deeplinks.py  worker.py
app/engine/decision/: __init__.py  eligibility.py  throttling.py
app/engine/templates/: __init__.py  base.py  registry.py  translations.py  validator.py
app/enrichers/: __init__.py  context_loader.py  validator.py  worker.py
app/enrichers/context/: base.py  registry.py
app/enrichers/context/loaders/: __init__.py  preferences.py  profile.py
contracts/: __init__.py  event_base.py  event_registry.py  event_types.py  validator.py
contracts/events/: __init__.py  engagement.py  reports.py  subscription.py  usage.py  user.py
core/: __init__.py  config.py  redis_client.py  utils.py
db/: schema.sql  seed.sql
docs/: ARCHITECTURE.md
scripts/: consume_test_stream.py  produce_test_event.py
